--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <ul class="dropdown-menu" role="menu">
     <li><a href="games/getbanana/index.html">Banana</a></li>
     <li><a href="games/shooting/index.html">Shooting</a></li>
-    <li><a href="games/SudokuJS/index.html">Sudoku</a></li>
+    <li><a href="games/SudokuJS/index.html">Gato</a></li>
     <li class="divider"></li>
     <li><a href="#">...</a></li>
   </ul>
