--- a/games/SudokuJS/index.html
+++ b/games/SudokuJS/index.html
@@ -178,7 +178,7 @@ if ((all==0)&&(pause==0)) myChoice();
    }
 }
 function taken() {
-alert("That square is already occupied.  Please select another square.")
+alert("El espacio esta ocupado. Elegir otro")
 pause=1;
 }
 function myChoice() {
@@ -206,7 +206,7 @@ document.images[temp].src= o;
 process();
 }
 function ended() {
-alert("The game has already ended. To play a new game click the Play Again button.")
+alert("El juego Termino. Click en Nuevo Juego para empezar otro.")
 }
 function process() {
 logicOne();
