--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <button type="button" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-sm"  onclick="MostrarConsejo()">
     <img src="img/cor2.png"> </button>
     <button type="button" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-sm-Hm"  onclick="MostrarAnimacion()">
-     Anime</button>
+     Humor</button>
   </div>
     <div class="btn-group" style="float:left;">
       
