--- a/games/ahorcado/index.html
+++ b/games/ahorcado/index.html
@@ -241,12 +241,13 @@ function dibujaAhorado(numerrores){
 }
 
 function Help(){
-	alert("Las letras estan en la parte de abajo. Pulsa letras que creas que completen la frase y ganar el juego. Buena Suerte!!!");
+	alert("Las letras estan en la parte de abajo. Pulsa letras que creas que completen la frase y ganar el juego. Buena Suerte!!!","Titulo?");
 }
 
 function NuevoJuego(){
-	window.reload();
+	window.location.reload()
 }
+
 </script>
 
 
