--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             }
         </script>
     </head>
-    <body style="background: url('img/fondo1.gif') no-repeat;background-size:100% 100%;">
+    <body style="background: yellow url('img/fondo1.gif') no-repeat;background-size:100% 100%;">
        <div id="main" >
            <div id="GameArea">
                <img src="gifs/bienverosa.gif" style="width:70%;">
               <div id="avatar" onclick="return MostrarAnimacion()">
-                    <img src="img/dr3.gif" style="float:left;margin-left:10%;max-width:450px;margin-bottom:-2000px;" id="IMGPrincipal">
+                    <img src="img/dr3.gif" style="float:left;margin-left:6%;max-width:450px;margin-bottom:-2000px;" id="IMGPrincipal">
               </div>
 <div class="btn-group" style="float:left;">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -61,7 +61,7 @@
     <li><a href="games/shooting/index.html">Shooting</a></li>
     <li><a href="games/SudokuJS/index.html">Gato</a></li>
     <li class="divider"></li>
-    <li><a href="games/aplicacion_ahorcado/index.html">Ahorcado</a></li>
+    <li><a href="games/ahorcado/index.html">Ahorcado</a></li>
   </ul>
 </div>
 <div class="btn-group" style="float:right;">
