--- a/games/shooting/index.html
+++ b/games/shooting/index.html
@@ -17,6 +17,9 @@
     </style>
 </head>
 <body>
+<script type="text/javascript">
+    alert("Dispara al mayor numero de naves sin que te toquen sus disparos. Arrastra con el Dedo la nave hacia arriba o abajo.");
+</script>
 </body>
 </html>
 
