--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             function MostrarAnimacion(){
                 var numrand = rand(30);
-                var str = "<p>Que te parece?</p>"+"<img src='gifs/im"+numrand+".gif'>";
+                var str = "<p>Que te parece?</p>"+"<img src='gifs/im"+numrand+".mp4'>";
                  $("#HumorBody").html(str);
                
             }
