--- a/games/ahorcado/index.html
+++ b/games/ahorcado/index.html
@@ -3,7 +3,6 @@
 <html><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-15">
 	<title>Aplicación de Ahorcado</title>
 
-	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 	<link type="text/css" href="jquery-ui-1.8.1.custom.css" rel="Stylesheet">      
 	<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
 	<script type="text/javascript" src="jquery-ui-1.8.1.custom.min.js"></script> 
@@ -298,7 +297,7 @@ body{
 <script type="text/javascript">
 	Help();
 </script>
-<div><button class="btn btn-primary" onclick="return Help()">Ayuda</button><button class="btn btn-success" onclick="return NuevoJuego()">Nuevo Juego</button></div>
+<div><button class="btn btn-primary" onclick="return Help()">Ayuda</button><button class="btn btn-green" onclick="return NuevoJuego()">Nuevo Juego</button></div>
 <div id="dibujoahorcado">
 	<canvas id="canvasahorcado" width="320" height="250">
 	El Ahorcado sólo funciona en navegadores que soporten Canvas. Actualízate a Firefox o Chrome, por poner dos posibilidades.
