--- a/games/getbanana/index.html
+++ b/games/getbanana/index.html
@@ -23,7 +23,7 @@
 				//window.location.href= "../";
 				alert("atras presionado");
 			}
-			alert("Recoge todas las bananas que puedas en un lapso de un minuto y medio. Toca en la pantalla donde quieras que el oso recolecte bananas.");
+			
 		</script>
     <style type="text/css">
         body {
@@ -32,6 +32,9 @@
     </style>
 </head>
 <body style="background:orange;">
+<script type="text/javascript">
+	alert("Recoge todas las bananas que puedas en un lapso de un minuto y medio. Toca en la pantalla donde quieras que el oso recolecte bananas.");
+</script>
 </body>
 </html>
 
